2020-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-shell-command): Set `default-directory'.

2020-02-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-shell-command-dont-erase-buffer):
	Fix docstring.

2020-02-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (shell-command-dont-erase-buffer): Declare.
	(tramp-test10-write-region, tramp-test21-file-links): Use function
	symbols.
	(tramp--test-async-shell-command): Don't assume that
	`async-shell-command' returns the process object.
	(tramp-test32-shell-command): Rework `async-shell-command-width' test.
	(tramp-test32-shell-command-dont-erase-buffer): New test.

2020-01-28  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.1 released.

2020-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test31-interrupt-process):
	Bind `delete-exited-processes'.
	(tramp--test-async-shell-command): Bind `delete-exited-processes'.
	Add additional `accept-process-output'.  Move cleanup of output
	buffer ...
	(tramp-test32-shell-command): ... here.  Test error buffer also
	for `async-shell-command'.

2020-01-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-shell-command): Test error buffer
	for synchronous `shell-command' only.
	(tramp-test43-asynchronous-requests): Skip.

2020-01-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test44-threads): Remove.
	(tramp-test44-auto-load, tramp-test44-delay-load)
	(tramp-test44-recursive-load, tramp-test44-remote-load-path)
	(tramp-test45-unload): Rename.

2020-01-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test31-interrupt-process): Tag it :unstable.
	Change `accept-process-output' arguments.
	(tramp--test-async-shell-command): New defun.
	(tramp--test-shell-command-to-string-asynchronously): Use it.
	(tramp-test32-shell-command): Refactor code.

2020-01-07  Michael Albinus  <michael.albinus@gmx.de>
