@@ -1,3 +1,10 @@
+2020-02-12  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-get-remote-gid): Declare.
+	(tramp-test18-file-attributes): Check `file-ownership-preserved-p'
+	only if possible.
+	(tramp-test30-make-process): Modify test due to *BSD.
+
 2020-02-05  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test32-shell-command): Set `default-directory'.
